--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -26,7 +26,7 @@ jobs:
         id: comment-info
         run: |
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
-          echo ::set-output name=comment-body::"$(echo ${{ github.event.comment.body }})"
+          echo ::set-output name=comment-body::"${(echo ${{ github.event.comment.body }})//\"/\\\"}"
       - name: check
         run: |
           echo "${{ steps.comment-info.outputs.comment-body }}"
