--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Run docker container with params
         run: |
           echo "${{ needs.setParams.outputs.comment-body }}"
-          ./.github/scripts/run_docker_with_params.sh "${{ needs.setParams.outputs.comment-body }}"
+          ./.github/scripts/run_docker_with_params.sh "${{ github.event.comment.body }}"
       - name: Add Success Comment
         if: needs.setParams.outputs.comment-id && success()
         uses: peter-evans/create-or-update-comment@v1
