--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -49,6 +49,18 @@ jobs:
           reactions: eyes, rocket
       - name: Checkout Airbyte
         uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
+      - name: Build application
+        run: ./gradlew clean build
+        shell: bash
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Pull Docker image
