--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -67,10 +67,14 @@ jobs:
         run: docker pull postgres
       - name: Change wrapper permissions
         run: chmod +x ./.github/scripts/run_docker_with_params.sh
-      - name: Run docker container with params
-        run: |
-          echo '${{ github.event.comment.body }}'
-          ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}'
+      - name: Build image
+        run: docker build -t testingtool .
+      - name: Run container
+        run: docker run testingtool:latest '${{ github.event.comment.body }}'
+#      - name: Run docker container with params
+#        run: |
+#          echo '${{ github.event.comment.body }}'
+#          ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}'
       - name: Add Success Comment
         if: needs.setParams.outputs.comment-id && success()
         uses: peter-evans/create-or-update-comment@v1
