custom connections + scenario

--- a/src/main/resources/configmodels/CredentialConfig.yaml
+++ b/src/main/resources/configmodels/CredentialConfig.yaml
@@ -22,3 +22,7 @@ properties:
   credentialJson:
     description: Json contains all required credentials for instance creation.
     existingJavaType: com.fasterxml.jackson.databind.JsonNode
+  additionalSettings:
+    description: Json contains additional settings
+    oneOf:
+      - "$ref": settings/ConnectionSettings.yaml
