--- a/src/main/resources/configmodels/InstanceCredTypes.yaml
+++ b/src/main/resources/configmodels/InstanceCredTypes.yaml
@@ -6,5 +6,6 @@ description: Types of instance credentials.
 type: string
 enum:
   - source_creds
+  - source_creds_with_conn_settings
   - destination_creds
   - airbyte_creds
