fix service deserialization

--- a/src/main/resources/configmodels/CredentialConfig.yaml
+++ b/src/main/resources/configmodels/CredentialConfig.yaml
@@ -23,6 +23,5 @@ properties:
     description: Json contains all required credentials for instance creation.
     existingJavaType: com.fasterxml.jackson.databind.JsonNode
   additionalSettings:
-    description: Json contains additional settings
-    oneOf:
-      - "$ref": settings/ConnectionSettings.yaml
+    description: Json contains additional settings. Check `settings` folder for yaml files.
+    existingJavaType: com.fasterxml.jackson.databind.JsonNode
