--- a/src/main/resources/configmodels/CredentialConfig.yaml
+++ b/src/main/resources/configmodels/CredentialConfig.yaml
@@ -22,3 +22,6 @@ properties:
   credentialJson:
     description: Json contains all required credentials for instance creation.
     existingJavaType: com.fasterxml.jackson.databind.JsonNode
+  additionalSettings:
+    description: Json contains additional settings. Check `settings` folder for yaml files.
+    existingJavaType: com.fasterxml.jackson.databind.JsonNode
