--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -75,18 +75,8 @@ jobs:
           cat > secrets/service_account_credentials.json << EOF
           "$SERVICE_ACCOUNT_SECRET"
           EOF
-      - name: CHECK
-        run: |
-          read var < secrets/service_account_credentials.json
-          echo $var
-      - name: Build image
-        run: docker build -t testingtool .
-      - name: Run container
-        run: docker run testingtool:latest '${{ github.event.comment.body }}'
-#      - name: Run docker container with params
-#        run: |
-#          echo '${{ github.event.comment.body }}'
-#          ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}'
+      - name: Run docker container with params
+        run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}'
       - name: Add Success Comment
         if: needs.setParams.outputs.comment-id && success()
         uses: peter-evans/create-or-update-comment@v1
