--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ plugins {
     id 'application'
     id "io.freefair.lombok" version "6.5.0.3"
     id 'jsonschema2pojo'
+    id 'com.palantir.docker'
 }
 
 sourceCompatibility = 17
