(0.3.0) Add possibility to provide params by actions

--- a/src/main/resources/configmodels/ScenarioConfigAction.yaml
+++ b/src/main/resources/configmodels/ScenarioConfigAction.yaml
@@ -25,3 +25,7 @@ properties:
     type: array
     items:
       "$ref": ScenarioConfigActionParameter.yaml
+  resultParameter:
+    description: The parameter which is a result of the action execution
+    type: Object
+    $ref: ScenarioConfigActionParameter.yaml
