--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -71,14 +71,10 @@ jobs:
           chmod +x ./.github/scripts/run_docker_with_params.sh
           mkdir secrets
       - name: Connect to secret manager
-        shell: bash
-        env:
-          SERVICE_ACCOUNT_SECRET: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
-        run: |
-          echo '$SERVICE_ACCOUNT_SECRET'
-          cat > secrets/service_account_credentials.json << EOF
-          '$SERVICE_ACCOUNT_SECRET'
-          EOF
+        uses: jsdaniell/create-json@1.1.2
+        with:
+          name: "secrets/service_account_credentials.json"
+          json: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
       - name: Run docker container with params
         run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}'
       - name: Add Success Comment
