--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -70,6 +70,7 @@ jobs:
         run: |
           chmod +x ./.github/scripts/run_docker_with_params.sh
           mkdir secrets
+          mkdir result
       - name: Connect to secret manager
         uses: jsdaniell/create-json@1.1.2
         with:
@@ -77,6 +78,11 @@ jobs:
           json: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
       - name: Run docker container with params
         run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}'
+      - name: Read file with results
+        id: read_file
+        uses: andstor/file-reader-action@v1
+        with:
+          path: "/result/log"
       - name: Add Success Comment
         if: needs.setParams.outputs.comment-id && success()
         uses: peter-evans/create-or-update-comment@v1
@@ -84,6 +90,8 @@ jobs:
           comment-id: ${{ needs.setParams.outputs.comment-id }}
           body: |
             > :white_check_mark: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+            >
+            > '${ steps.read_file.outputs.contents }'
       - name: Add Failure Comment
         if: needs.setParams.outputs.comment-id && failure()
         uses: peter-evans/create-or-update-comment@v1
@@ -91,3 +99,5 @@ jobs:
           comment-id: ${{ needs.setParams.outputs.comment-id }}
           body: |
             > :x: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+            >
+            > '${ steps.read_file.outputs.contents }'
