--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -90,8 +90,7 @@ jobs:
           comment-id: ${{ needs.setParams.outputs.comment-id }}
           body: |
             > :white_check_mark: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
-            >   
-            > ${{ steps.read_file.outputs.contents }}
+            ${{ steps.read_file.outputs.contents }}
       - name: Add Failure Comment
         if: needs.setParams.outputs.comment-id && failure()
         uses: peter-evans/create-or-update-comment@v1
@@ -99,5 +98,4 @@ jobs:
           comment-id: ${{ needs.setParams.outputs.comment-id }}
           body: |
             > :x: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
-            >   
-            > ${{ steps.read_file.outputs.contents }}
+            ${{ steps.read_file.outputs.contents }}
