added github action result to the comment

--- a/src/main/resources/configmodels/settings/ConnectionSettings.yaml
+++ b/src/main/resources/configmodels/settings/ConnectionSettings.yaml
@@ -11,4 +11,4 @@ properties:
     type: string
   syncCatalogConfig:
     description: Sync Catalog Configuration
-    "$ref": AirbyteCatalogSettings.yaml
+    "$ref": catalog/AirbyteCatalogSettings.yaml
