--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -66,7 +66,7 @@ jobs:
         shell: bash
       - name: Get application version
         id: get-version
-        run: echo ::set-output name=version::"eval ./gradlew getImageVersion"
+        run: echo ::set-output name=version::"$(eval ./gradlew getImageVersion)"
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Change wrapper permissions
