Create custom connection (#40)
* added settings for configuration custom connection

* added github action result to the comment

* added settings for connection customization

* added settings for connection customization

--- a/src/main/resources/configmodels/settings/ConnectionSettings.yaml
+++ b/src/main/resources/configmodels/settings/ConnectionSettings.yaml
@@ -9,3 +9,6 @@ properties:
   connectionName:
     description: TBD
     type: string
+  syncCatalogConfig:
+    description: Sync Catalog Configuration
+    "$ref": catalog/AirbyteCatalogSettings.yaml
