--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -32,7 +32,7 @@ jobs:
           regex_pattern: "^/[a-zA-Z0-9_/-]+"
           regex_flags: "i"
           search_string: ${{ github.event.comment.body }}
-  slashCommandDispatch:
+  runAirbyte:
     if: |
       needs.setParams.outputs.command == '/help-full' ||
       needs.setParams.outputs.command == '/list-scenarios' ||
@@ -41,6 +41,32 @@ jobs:
       needs.setParams.outputs.command == '/help'
     runs-on: ubuntu-latest
     needs: setParams
+    steps:
+      - name: Update comment for processing
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          comment-id: ${{ needs.setParams.outputs.comment-id }}
+          body: |
+            > :see_no_evil: We apologize. Our team is currently testing new features that will change your life and work for the best. Please wait a few hours.
+      - name: Download docker-compose file
+        id: docker-compose-file
+        uses: suisei-cn/actions-download-file@v1.0.1
+        with:
+          url: "https://github.com/airbytehq/airbyte/blob/master/docker-compose.yaml"
+      - name: Download env file
+        id: env-file
+        uses: suisei-cn/actions-download-file@v1.0.1
+        with:
+          url: "https://github.com/airbytehq/airbyte/blob/master/.env"
+      - name: Check docker-compose file
+        run: (ls docker-compose.yaml && echo yes) || echo no
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Run airbyte
+        run: docker-compose up
+  slashCommandDispatch:
+    runs-on: ubuntu-latest
+    needs: runAirbyte
     steps:
       - name: Update comment for processing
         uses: peter-evans/create-or-update-comment@v1
@@ -67,8 +93,6 @@ jobs:
       - name: Get application version
         id: get-version
         run: echo ::set-output name=version::"$(eval ./gradlew getImageVersion)"
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Change wrapper permissions
         run: |
           chmod +x ./.github/scripts/run_docker_with_params.sh
