--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -60,10 +60,12 @@ jobs:
           url: "https://github.com/airbytehq/airbyte/blob/master/.env"
       - name: Check docker-compose file
         run: (ls docker-compose.yaml && echo yes) || echo no
+      - name: Check env file
+        run: (ls .env && echo yes) || echo no
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Run airbyte
-        run: docker-compose up
+      - name: Pull airbyte docker containers
+        run: docker-compose pull
   slashCommandDispatch:
     runs-on: ubuntu-latest
     needs: runAirbyte
