--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -64,8 +64,10 @@ jobs:
         run: (ls .env && echo yes) || echo no
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Pull airbyte docker containers
-        run: docker-compose pull
+      - name: Set up Docker Compose
+        uses: isbang/compose-action@v1.2.0
+        with:
+          compose-file: "./docker-compose.yml"
   slashCommandDispatch:
     runs-on: ubuntu-latest
     needs: runAirbyte
