--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -64,6 +64,16 @@ jobs:
         run: (ls .env && echo yes) || echo no
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Install Pyenv and Tox
+        run: |
+          python3 -m pip install --quiet virtualenv==16.7.9 --user
+          python3 -m virtualenv venv
+          source venv/bin/activate
+          pip install --quiet tox==3.24.4
       - name: Run Airbyte
         run: docker-compose up -d
   slashCommandDispatch:
