--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -74,6 +74,10 @@ jobs:
           python3 -m virtualenv venv
           source venv/bin/activate
           pip install --quiet tox==3.24.4
+      - name: Read docker-compose file
+        run: while read line; do echo $line; done < docker-compose.yaml
+      - name: Read env file
+        run: while read line; do echo $line; done < .env
       - name: Run Airbyte
         run: docker-compose up -d
   slashCommandDispatch:
