--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -53,27 +53,19 @@ jobs:
         uses: suisei-cn/actions-download-file@v1.0.1
         with:
           url: "https://github.com/airbytehq/airbyte/blob/master/docker-compose.yaml"
+          auto-match: true
       - name: Download env file
         id: env-file
         uses: suisei-cn/actions-download-file@v1.0.1
         with:
           url: "https://github.com/airbytehq/airbyte/blob/master/.env"
+          auto-match: true
       - name: Check docker-compose file
         run: (ls docker-compose.yaml && echo yes) || echo no
       - name: Check env file
         run: (ls .env && echo yes) || echo no
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Install Pyenv and Tox
-        run: |
-          python3 -m pip install --quiet virtualenv==16.7.9 --user
-          python3 -m virtualenv venv
-          source venv/bin/activate
-          pip install --quiet tox==3.24.4
       - name: Read docker-compose file
         run: while read line; do echo $line; done < docker-compose.yaml
       - name: Read env file
