--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -49,27 +49,16 @@ jobs:
           body: |
             > :see_no_evil: We apologize. Our team is currently testing new features that will change your life and work for the best. Please wait a few hours.
       - name: Download docker-compose file
-        id: docker-compose-file
-        uses: suisei-cn/actions-download-file@v1.0.1
+        uses: robinraju/release-downloader@v1.5
         with:
-          url: "https://github.com/airbytehq/airbyte/blob/master/docker-compose.yaml"
-          auto-match: true
-      - name: Download env file
-        id: env-file
-        uses: suisei-cn/actions-download-file@v1.0.1
-        with:
-          url: "https://github.com/airbytehq/airbyte/blob/master/.env"
-          auto-match: true
+          repository: "airbytehq/airbyte"
+          fileName: "docker-compose.yaml"
       - name: Check docker-compose file
         run: (ls docker-compose.yaml && echo yes) || echo no
-      - name: Check env file
-        run: (ls .env && echo yes) || echo no
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Read docker-compose file
         run: while read line; do echo $line; done < docker-compose.yaml
-      - name: Read env file
-        run: while read line; do echo $line; done < .env
       - name: Run Airbyte
         run: docker-compose up -d
   slashCommandDispatch:
