update github action for run airbyte local

--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -54,6 +54,7 @@ jobs:
           repository: "airbytehq/airbyte"
           fileName: ".env"
           latest: true
+          out-file-path: ".env"
       - name: Check env file
         run: (ls .env && echo yes) || echo no
       - name: Set up Docker Buildx
