--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -49,11 +49,9 @@ jobs:
           body: |
             > :see_no_evil: We apologize. Our team is currently testing new features that will change your life and work for the best. Please wait a few hours.
       - name: Download docker-compose file
-        uses: robinraju/release-downloader@v1.5
+        uses: carlosperate/download-file-action@v1
         with:
-          repository: "airbytehq/airbyte"
-          fileName: "docker-compose.yaml"
-          latest: true
+          file-url: 'https://github.com/airbytehq/airbyte/blob/master/docker-compose.yaml'
       - name: Check docker-compose file
         run: (ls docker-compose.yaml && echo yes) || echo no
       - name: Set up Docker Buildx
