--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -59,10 +59,12 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Files
         run: ls -al
+      - name: Mv
+        run: mv env .env
       - name: Read docker-compose file
         run: while read line; do echo $line; done < docker-compose.yaml
       - name: Read env file
-        run: while read line; do echo $line; done < env
+        run: while read line; do echo $line; done < .env
       - name: Run Airbyte
         run: docker-compose up -d
       - name: Checkout Testing Tool
