--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
 
 jobs:
-  setParams:
+  set-params:
     # Only allow slash commands on pull request (not on issues)
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
@@ -32,13 +32,10 @@ jobs:
           regex_pattern: "^/[a-zA-Z0-9_/-]+"
           regex_flags: "i"
           search_string: ${{ github.event.comment.body }}
-  slashCommandDispatch:
+  helps-run:
     runs-on: ubuntu-latest
     if: |
       needs.setParams.outputs.command == '/help-full' ||
-      needs.setParams.outputs.command == '/list-scenarios' ||
-      needs.setParams.outputs.command == '/run-scenario' ||
-      needs.setParams.outputs.command == '/run-scenario-local' ||
       needs.setParams.outputs.command == '/help'
     needs: setParams
     steps:
@@ -52,6 +49,75 @@ jobs:
         with:
           repository: ${{  needs.setParams.outputs.repo }}
           ref: ${{  needs.setParams.outputs.ref }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
+      - name: Build application
+        run: ./gradlew clean build
+        shell: bash
+      - name: Get application version
+        id: get-version
+        run: echo ::set-output name=version::"$(eval ./gradlew getImageVersion)"
+      - name: Change wrapper permissions
+        run: |
+          chmod +x ./.github/scripts/run_docker_with_params.sh
+          mkdir secrets
+          mkdir result
+      - name: Connect to secret manager
+        uses: jsdaniell/create-json@1.1.2
+        with:
+          name: "/secrets/service_account_credentials.json"
+          json: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
+      - name: Run docker container with params
+        run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}' '${{ steps.get-version.outputs.version }}'
+      - name: Read file with results
+        id: read_file
+        uses: andstor/file-reader-action@v1
+        with:
+          path: "result/log"
+      - name: Add Success Comment
+        if: needs.setParams.outputs.comment-id && success()
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          comment-id: ${{ needs.setParams.outputs.comment-id }}
+          body: |
+            > :white_check_mark: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+            ${{ steps.read_file.outputs.contents }}
+      - name: Add Failure Comment
+        if: needs.setParams.outputs.comment-id && failure()
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          comment-id: ${{ needs.setParams.outputs.comment-id }}
+          body: |
+            > :x: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+  scenarios-run:
+    runs-on: ubuntu-latest
+    if: |
+      needs.setParams.outputs.command == '/list-scenarios' ||
+      needs.setParams.outputs.command == '/run-scenario' ||
+      needs.setParams.outputs.command == '/run-scenario-local'
+    needs: setParams
+    steps:
+      - name: Update comment for processing
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          comment-id: ${{ needs.setParams.outputs.comment-id }}
+          reactions: eyes, rocket
+      - name: Checkout Testing Tool
+        uses: actions/checkout@v2
+        with:
+          repository: ${{  needs.setParams.outputs.repo }}
+          ref: ${{  needs.setParams.outputs.ref }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Download docker-compose file
         uses: carlosperate/download-file-action@v1
         with:
@@ -60,8 +126,6 @@ jobs:
         uses: carlosperate/download-file-action@v1
         with:
           file-url: 'https://raw.githubusercontent.com/airbytehq/airbyte/master/.env'
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Rename env file
         run: mv env .env
       - name: Run Airbyte
