--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -37,7 +37,7 @@ jobs:
     if: |
       needs.setParams.outputs.command == '/help-full' ||
       needs.setParams.outputs.command == '/help'
-    needs: setParams
+    needs: set-params
     steps:
       - name: Update comment for processing
         uses: peter-evans/create-or-update-comment@v1
@@ -104,7 +104,7 @@ jobs:
       needs.setParams.outputs.command == '/list-scenarios' ||
       needs.setParams.outputs.command == '/run-scenario' ||
       needs.setParams.outputs.command == '/run-scenario-local'
-    needs: setParams
+    needs: set-params
     steps:
       - name: Update comment for processing
         uses: peter-evans/create-or-update-comment@v1
