add normalization for connection (if destination have this possibility) and add normalization parameter to the custom connection settings

--- a/src/main/resources/configmodels/settings/ConnectionSettings.yaml
+++ b/src/main/resources/configmodels/settings/ConnectionSettings.yaml
@@ -9,6 +9,10 @@ properties:
   connectionName:
     description: TBD
     type: string
+  normalization:
+    description: Use normalization with custom connection
+    type: boolean
+    default: false
   syncCatalogConfig:
     description: Sync Catalog Configuration
     "$ref": catalog/AirbyteCatalogSettings.yaml
