--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -32,6 +32,58 @@ jobs:
           regex_pattern: "^/[a-zA-Z0-9_/-]+"
           regex_flags: "i"
           search_string: ${{ github.event.comment.body }}
+  publish-image:
+    runs-on: ubuntu-latest
+    if: |
+      needs.set-params.outputs.command == '/publish'
+    needs: set-params
+    steps:
+      - name: Add Success Comment
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          comment-id: ${{ needs.set-params.outputs.comment-id }}
+          body: |
+           > :see_no_evil:We apologize. Our team is currently testing new features that will change your life and work for the best. Please wait a few hours.
+      - name: Checkout Testing Tool
+        uses: actions/checkout@v2
+        with:
+          repository: ${{  needs.set-params.outputs.repo }}
+          ref: ${{  needs.set-params.outputs.ref }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
+        - name: Build application
+        run: ./gradlew clean build
+        shell: bash
+      - name: Login to Docker (on Master)
+        uses: docker/login-action@v2
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        with:
+          username: ${{ DOCKER_HUB_USERNAME }}
+          password: ${{ DOCKER_HUB_PASSWORD }}
+      - name: Extract docker image version
+        id: get-version
+        run: echo ::set-output name=version::"$(eval ./gradlew getVersion)"
+      - name: Extract docker image name
+        id: get-name
+        run: echo ::set-output name=name::"$(eval ./gradlew getProjectName)"
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.get-version.outputs.version }}
+          labels: ${{ steps.get-name.outputs.name }}
   helps-run:
     runs-on: ubuntu-latest
     if: |
@@ -111,13 +163,10 @@ jobs:
         with:
           comment-id: ${{ needs.set-params.outputs.comment-id }}
           reactions: eyes, rocket
-      - name: Checkout Testing Tool
-        uses: actions/checkout@v2
-        with:
-          repository: ${{  needs.set-params.outputs.repo }}
-          ref: ${{  needs.set-params.outputs.ref }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Pull Testing Tool docker image
+        run : docker pull airbyte/airbyte-e2e-testing-tool:latest
       - name: Download docker-compose file
         uses: carlosperate/download-file-action@v1
         with:
@@ -130,21 +179,6 @@ jobs:
         run: mv env .env
       - name: Run Airbyte
         run: docker-compose up -d
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        with:
-          arguments: build
-      - name: Build application
-        run: ./gradlew clean build
-        shell: bash
-      - name: Get application version
-        id: get-version
-        run: echo ::set-output name=version::"$(eval ./gradlew getImageVersion)"
       - name: Change wrapper permissions
         run: |
           chmod +x ./.github/scripts/run_docker_with_params.sh
@@ -156,7 +190,7 @@ jobs:
           name: "/secrets/service_account_credentials.json"
           json: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
       - name: Run docker container with params
-        run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}' '${{ steps.get-version.outputs.version }}'
+        run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}' 'airbyte-e2e-testing-tool:latest'
       - name: Read file with results
         id: read_file
         uses: andstor/file-reader-action@v1
