--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build with Gradle
+      - name: Set up Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
@@ -67,7 +67,7 @@ jobs:
       - name: Login to Docker (on Master)
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: Extract docker image version
         id: get-version
@@ -101,21 +101,8 @@ jobs:
           ref: ${{  needs.set-params.outputs.ref }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        with:
-          arguments: build
-      - name: Build application
-        run: ./gradlew clean build
-        shell: bash
-      - name: Get application version
-        id: get-version
-        run: echo ::set-output name=version::"$(eval ./gradlew getImageVersion)"
+      - name: Pull Testing Tool docker image
+        run: docker pull airbyte/airbyte-e2e-testing-tool:latest
       - name: Change wrapper permissions
         run: |
           chmod +x ./.github/scripts/run_docker_with_params.sh
@@ -127,7 +114,7 @@ jobs:
           name: "/secrets/service_account_credentials.json"
           json: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
       - name: Run docker container with params
-        run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}' '${{ steps.get-version.outputs.version }}'
+        run: ./.github/scripts/run_docker_with_params.sh '${{ github.event.comment.body }}' 'airbyte-e2e-testing-tool:latest'
       - name: Read file with results
         id: read_file
         uses: andstor/file-reader-action@v1
