--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,8 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.0-rc1'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'io.airbyte:airbyte-api:0.40.0-alpha'
     implementation 'com.google.cloud:google-cloud-secretmanager'
