--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ version '0.4.3'
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         url "https://airbyte.mycloudrepo.io/public/repositories/airbyte-public-jars/"
     }
